Add self-service Basic subscription cancellation
